@@ -5,10 +5,5 @@
     <parameter key="floating_point_precision" type="int" value="64"/>
     <parameter key="linear_algebra_backend" type="string" value="uBLAS"/>
     <parameter key="optimize" type="bool" value="false"/>
-    <parameter key="optimize_form" type="bool" value="false"/>
-    <parameter key="optimize_use_dof_map_cache" type="bool" value="false"/>
-    <parameter key="optimize_use_tensor_cache" type="bool" value="false"/>
-    <parameter key="plot_filename_prefix" type="string" value="dolfin_plot_data"/>
-    <parameter key="timer_prefix" type="string" value=""/>
   </parameters>
 </dolfin>
