@@ -1,3 +1,4 @@
+ - Make XML parser append/overwrite parameter set when reading parameters from file
  - Refinement of function spaces and automatic interpolation of member functions
  - Allow setting global parameters for Krylov solver
  - Fix handling of Constants in Python interface to avoid repeated JIT compilation
